Fixed overlap issue

--- a/style.css
+++ b/style.css
@@ -1,19 +1,23 @@
-header {
-    position: fixed;
-    width: 100%;
+nav {
     top: 0;
+    height: 40px;
+    justify-content: center;
+    margin-bottom: 10px;
 }
 
+main {
+    margin-top: 70px;
+}
 .container {
     width: 100%;
 }
 
 .card {
     width: 100%;
+    height: 40%;
     text-align: center;
     justify-content: center;
     overflow: auto;
-    display: inline-block;
 }
 
 .card-container {
@@ -21,7 +25,6 @@ header {
     margin: auto 0;
     display: flex;
     text-align: center;
-    justify-content: center;
 }
 
 img {
